--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "private": false,
   "dependencies": {
-    "express": "4.8.8"
+    "express": "4.8.8",
+	"compression": "1.0.11"
   },
   "repository": {
     "type": "git",
