--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": false,
   "dependencies": {
     "express": "4.8.8",
-	"compression": "1.0.11"
+    "compression": "1.0.11",
+    "couchdb": "0.3.8"
   },
   "repository": {
     "type": "git",
