--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": false,
   "dependencies": {
     "express": "4.8.8",
-    "compression": "1.0.11",
-    "couchdb": "0.3.8"
+    "compression": "1.0.11"
   },
   "repository": {
     "type": "git",
